[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renquant-model-patchtst"
version = "0.1.0"
description = "PatchTST/PatchTXT sequence-model training and validation for RenQuant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "renquant-common>=0.1.0",
  "renquant-base-data>=0.1.0",
  "renquant-artifacts>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../renquant-common/src", "../renquant-base-data/src", "../renquant-artifacts/src"]
testpaths = ["tests"]
